<resources>
    <string name="app_name">Manhattan</string>
    <string name="tuwya">Tell us who you are ...</string>
    <string name="yn">Your name</string>
    <string name="yln">Your last name</string>
    <string name="ya">Your address</string>
    <string name="yl">Your location</string>
    <string name="ye">Your eMail</string>
    <string name="yf">Your Facebook</string>
    <string name="yg">Your Google</string>
    <string name="si">Sing In</string>
    <string name="facebook_app_id" translatable="false">245836276287371</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb245836276287371</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="ud">Update</string>
    <string name="ua">Profile Updated</string>
    <string name="store">Store</string>
    <string name="product">Product</string>
    <string name="ne">New Store</string>
    <string name="ds">Description</string>
    <string name="as">Address</string>
    <string name="ls">Location</string>
    <string name="cs">City</string>
    <string name="ss">State</string>
    <string name="select">Select</string>
    <string name="redInfo">Check the fields in red</string>
    <string name="create">Create!</string>
    <string name="update">Update!</string>
    <string name="us">UPDATE STORE</string>
    <string name="wait">\"Wait ... \"</string>
    <string name="aygtut">Are you going to update that?</string>
    <string name="y">Yes</string>
    <string name="n" translatable="false">No</string>
    <string name="editprofile">Edit Profile</string>
    <string name="title_product_list">Products</string>
    <string name="title_product_detail">Product Detail</string>
    <string name="bar_code">Bar Code</string>
    <string name="make">Make</string>
    <string name="price">Price</string>
    <string name="unit_measure">Measure</string>
    <string name="weight_size_capacity">Weight/Size</string>
    <string name="equivalent_price">Equivalent Price</string>
    <string name="registration_date">Registration Date</string>
    <string name="new_product">New Product</string>
    <string name="shopping">Shopping</string>
    <string name="product_no_found">Product not found ... Do you want to create it?</string>
    <string name="quantity">Quantity</string>
    <string name="products">Products</string>
    <string name="total_purchase">Total Purchase</string>
</resources>
