<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.traffico.manhattan.HomeFragment">

    <!--TextView and Button displayed in First Fragment -->
    <Button
        android:id="@+id/bProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/profile" />

    <Button
        android:id="@+id/bStore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bProfile"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/store" />

    <Button
        android:id="@+id/bProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bStore"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/product" />

</RelativeLayout>